--- a/syllabus/communication-help.Rmd
+++ b/syllabus/communication-help.Rmd
@@ -8,7 +8,7 @@ All course communication will be managed through [Slack](https://6574-s11-f19.sl
 
 - Ask questions.
 - Ask for help with an assignment.
-- Send direct, private messages to each other or the instructors (just like email...bu better!)
+- Send direct, private messages to each other or the instructors (just like email...but better!)
 
 **Asking for help on Slack**:
 
