--- a/hw2-functions.Rmd
+++ b/hw2-functions.Rmd
@@ -36,42 +36,42 @@ output:
 
 Rules:
 
+- You may **NOT** use loops on any of these functions.
 - For functions 1-7, you may **NOT** use loops or conditionals
-- For functions 8-9, you may use conditionals, but you may **NOT** use loops.
 
 **Hint**: Read the [Getting Started Tips](L1.2-getting-started.html#tips), [Programming Basics Tips](L2-programming-basics.html#tips), and [Functions Tips](L3-functions.html#tips) - these could come in handy!
 
-### 1) `integerSquareRoot(x)` [SOLO, 10 pts]
+### 1) `integerSquareRoot(x)` [SOLO, 5 pts]
 
 Given a non-negative integer `n`, return the integer value that is closest to its square root. For example, `integerSquareRoot(10)` returns `3`.
 
-### 2) `fabricYards(inches)` [SOLO, 10 pts]
+### 2) `fabricYards(inches)` [SOLO, 5 pts]
 
 Fabric must be purchased in whole yards. Write a function that takes a non-negative number of inches of fabric desired, and returns the smallest number of whole yards of fabric that must be purchased.  Thus, `fabricYards(1)` is `1` (you need a full yard if you buy one inch) and `fabricYards(36)` is also `1`, but `fabricYards(37)` is `2`.
 
-### 3) `fabricExcess(inches)` [SOLO, 10 pts]
+### 3) `fabricExcess(inches)` [SOLO, 5 pts]
 
 Write a function that takes a non-negative number of inches of fabric desired and returns the number of inches of excess fabric that must be purchased (as purchases must be in whole yards). Thus, since you need a whole yard when you buy 1 inch, `fabricExcess(1)` is `35`. Similarly, `fabricExcess(36)` is `0`, and `fabricExcess(37)` is `35`.
 
 Hint: there are (at least) two good ways to write this. One way involves a simple expression using one of the math operators we have learned. The other way uses `fabricYards(inches)` (which you just wrote!).
 
-### 4) `distance(x1, y1, x2, y2)` [SOLO, 10 pts]
+### 4) `distance(x1, y1, x2, y2)` [COLLABORATIVE, 10 pts]
 
 Given four numeric values representing the points `(x1, y1)` and `(x2, y2)`, write the function `distance(x1, y1, x2, y2)` returns the Euclidean distance between those points.
 
-### 5) `isRightTriangle(x1, y1, x2, y2, x3, y3)` [SOLO, 10 pts]
+### 5) `isRightTriangle(x1, y1, x2, y2, x3, y3)` [COLLABORATIVE, 10 pts]
 
-Given six numeric values representing the points `(x1, y1)`, `(x2, y2)`, and `(x3, y3)`, return `TRUE` if the triangle formed by connecting the 3 points is a right triangle, and `FALSE` otherwise. You may wish to use the `distance(x1, y1, x2, y2)` function as a helper function. You may ignore the case where the 3 points are collinear (and so do not form a triangle). Hint: [Herod's Formula](https://en.wikipedia.org/wiki/Heron%27s_formula).
+Given six numeric values representing the points `(x1, y1)`, `(x2, y2)`, and `(x3, y3)`, return `TRUE` if the triangle formed by connecting the 3 points is a right triangle, and `FALSE` otherwise. You may wish to use the `distance(x1, y1, x2, y2)` function as a helper function. You may ignore the case where the 3 points are collinear (and so do not form a triangle). Hint: [Heron's Formula](https://en.wikipedia.org/wiki/Heron%27s_formula){target="_blank"}.
 
-### 6) `numberOfPoolBalls(rows)` [COLLABORATIVE, 10 pts]
+### 6) `triangleArea(x1, y1, x2, y2, x3, y3)` [COLLABORATIVE, 10 pts]
+
+Given six numeric values representing the points `(x1, y1)`, `(x2, y2)`, and `(x3, y3)`, return the area of the triangle formed by connecting the 3 points. You may wish to use the `distance(x1, y1, x2, y2)` function as a helper function. You may ignore the case where the 3 points are collinear (and so do not form a triangle). Hint: [Heron's Formula](https://en.wikipedia.org/wiki/Heron%27s_formula){target="_blank"}.
+
+### 7) `numberOfPoolBalls(rows)` [COLLABORATIVE, 10 pts]
 
 ![](images/poolballs.jpg){ width=150 }
 
-Pool balls are arranged in rows where the first row contains 1 pool ball and each row contains 1 more pool ball than the previous row. Thus, if there are 3 rows, then we'd have 6 total pool balls (1+2+3). Write a function that takes an integer value (the number of rows) and returns another integer value (the number of pool balls in that number of rows). For example, `numberOfPoolBalls(3)` returns `6`. Do not use loops.
-
-### 7) `numberOfPoolBallRows(balls)` [COLLABORATIVE, 10 pts]
-
-This problem is the inverse of the previous problem. In this case, return the number of rows required for the given number of pool balls. Thus, `numberOfPoolBallRows(6)` returns `3`. Note that if any balls must be in a row, then you count that row, and so `numberOfPoolBallRows(7)` returns `4` (since the 4th row must have a single ball in it).
+Pool balls are arranged in rows where the first row contains 1 pool ball and each row contains 1 more pool ball than the previous row. Thus, for example, 3 rows contain 6 total pool balls (1+2+3). With this in mind, write the function numberOfPoolBalls(rows) that takes a non-negative integer value, the number of rows, and returns another int value, the number of pool balls in that number of full rows. For example, `numberOfPoolBalls(3)` returns `6`. We will not limit our analysis to a "rack" of 15 balls; rather, our pool table can contain an unlimited number of rows. Do not use loops. Hint: For this problem you should research [Triangular Numbers](https://en.wikipedia.org/wiki/Triangular_number){target="_blank"}.
 
 ### 8) `isEvenPositiveInt(x)` [COLLABORATIVE, 15 pts]
 
@@ -80,6 +80,38 @@ Given an arbitrary value `x`, return `TRUE` if it is an integer, and it is posit
 ### 9) `getTheCents(n)` [COLLABORATIVE, 15 pts]
 
 Write the function `getTheCents(n)` which takes a value `n` (which represents a payment in US dollars) and returns the number of cents in the payment. For example, if n is 2.45, the function should return 45. If n is an integer, the function should return 0, as it has 0 cents; if it isn't a number, it should return `NULL`, because a non-number payment make no cents (ha!). If the payment has partial cents (for example, 3.953), it should be rounded up to the nearest cent (in this example, 96 cents).
+
+### 10) `turtleSquare(s)` [COLLABORATIVE, 15 pts]
+
+Write the function `turtleSquare(s)` which uses the `TurtleGraphics` library to draw a square with side length `s < 100`. The square should be centered in the turtle's terrarium. **Note**: Do not put the `turtle_init()` command inside your function - the turtle must be "initialized" inside the terrarium before calling your `turtleSquare(s)` function. For example, the code below produces a square with side length of 50:
+
+```{r, eval=FALSE}
+library(TurtleGraphics)
+turtle_init()
+turtle_do({
+    turtleSquare(50)
+})
+```
+![](images/turtle_square.png){ width=456 }
+
+---
+
+### Bonus Credit 1) `numberOfPoolBallRows(balls)` [SOLO, 5 pts]
+
+This problem is the inverse of the `numberOfPoolBalls(rows)` problem. In this case, return the number of rows required for the given number of pool balls. Thus, `numberOfPoolBallRows(6)` returns `3`. Note that if any balls must be in a row, then you count that row, and so `numberOfPoolBallRows(7)` returns `4` (since the 4th row must have a single ball in it).
+
+### Bonus Credit 2) `turtleTriangle(s)` [SOLO, 5 pts]
+
+Write the function `turtleTriangle(s)` which uses the `TurtleGraphics` library to draw an equilateral triangle with side length `s < 100`. The triangle should be centered in the turtle's terrarium. Hint: Getting the triangle centered is the tricky part - you may want to read more about [equilateral triangles](https://en.wikipedia.org/wiki/Equilateral_triangle){target="_blank"} and [apothems](https://en.wikipedia.org/wiki/Apothem){target="_blank"}. The code below produces a triangle with side length of 50:
+
+```{r, eval=FALSE}
+library(TurtleGraphics)
+turtle_init()
+turtle_do({
+    turtleTriangle(50)
+})
+```
+![](images/turtle_triangle.png){ width=456 }
 
 ---
 
