Added P5 and updated all other practice pages

--- a/P11-monte-carlo-methods.Rmd
+++ b/P11-monte-carlo-methods.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "Practice 11 - Monte Carlo Methods"
-output: html_document
+output:
+  html_document:
+    number_sections: false
+    toc: no
 ---
 
 ```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
