--- a/P4-conditionals-testing.Rmd
+++ b/P4-conditionals-testing.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "Practice 4 - Conditionals & Testing"
-output: html_document
+output:
+  html_document:
+    number_sections: false
+    toc: no
 ---
 
 ```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
