--- a/P6-vectors.Rmd
+++ b/P6-vectors.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "Practice 6 - Vectors"
-output: html_document
+output:
+  html_document:
+    number_sections: false
+    toc: no
 ---
 
 ```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
