--- a/P9-data-frames.Rmd
+++ b/P9-data-frames.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "Practice 9 - Data Frames"
-output: html_document
+output:
+  html_document:
+    number_sections: false
+    toc: no
 ---
 
 ```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
