--- a/L10-matrices.Rmd
+++ b/L10-matrices.Rmd
@@ -8,13 +8,194 @@ rm(list=objects()) # start with a clean workspace
 source("knitr_setup.R")
 ```
 
----
+![](images/neo_R.jpg){ width=300 }
 
 ---
 
-**Page sources**:
+A matrix is a two dimensional data structure in R. Matrices are similar to vectors, but have both rows and columns. Just like vectors, matrices can only contain one data type.
 
-Some content on this page has been modified from other courses, including:
+# Creating a matrix
 
-- CMU [15-112: Fundamentals of Programming](http://www.kosbie.net/cmu/spring-17/15-112/), by [David Kosbie](http://www.kosbie.net/cmu/) & [Kelly Rivers](https://hcii.cmu.edu/people/kelly-rivers)
-- Danielle Navarro's website ["R for Psychological Science"](https://psyr.org/index.html)
+## The `matrix()` function
+
+A matrix can be created using the `matrix()` function, which takes a vector of values and formats them into rows and columns by using the `nrow` and `ncol` arguments.
+
+```{r}
+a <- matrix(1:9, nrow = 3, ncol = 3)
+a
+```
+
+Providing a value for both dimensions is not necessary. If one of the dimension is provided, the other is inferred from length of the vector:
+
+```{r}
+# For the 10-element vector, the argument `ncol = 2` implies that there must be 5 rows:
+b <- matrix(1:10, ncol = 2)
+b
+```
+
+If you provide no dimensions, the matrix will by default have just 1 column:
+
+
+```{r}
+c <- matrix(1:5)
+c
+```
+
+By default, the `matrix()` function populates the matrix column-wise, meaning it fills in the values in the left-most column first (from top to bottom), then continues in the 2nd column, and so on. You can swap this to fill row-wise by using `byrow = TRUE`:
+
+```{r}
+d <- matrix(1:10, ncol = 2, byrow = TRUE)
+d
+```
+
+## The `cbind()` and `rbind()` functions
+
+Another way of creating a matrix is by using the functions `cbind()` and `rbind()`, which stand for "column bind" and "row bind". These can be used to "bind" together vectors or other matrices:
+
+```{r}
+x <- c(1, 2, 3)
+y <- c(4, 5, 6)
+```
+```{r}
+e <- cbind(x, y)
+e
+```
+```{r}
+f <- rbind(x, y)
+f
+```
+
+## Dimensions
+
+You can check the dimensions of any matrix by using the `nrow()` and `ncol()` functions (which give the number of rows and columns, respectively), or the `dim()` function, which returns a vector containing the number of rows and columns:
+
+```{r}
+nrow(b)
+ncol(b)
+dim(b)
+```
+
+You can also create a matrix from a vector by setting its dimension using the `dim()` function (though I almost never do this):
+
+```{r}
+g <- c(1, 2, 3, 4, 5, 6)
+dim(g) <- c(2, 3)
+g
+```
+
+---
+
+# Accessing elements in a matrix
+
+Just like with [vectors](L6-vectors.html#2_accessing_elements_in_a_vector), you can access elements in a matrix using brackets `[]` and indices inside the brackets. The general form is:
+
+```
+MATRIX[ROWS, COLUMNS]
+```
+
+The most common way is to use integer indices, but you can also use character indices (by naming each row and column) and logical indices.
+
+## Using integer indices
+
+To index with integers, we specify the row numbers and column numbers as vectors.
+
+```{r}
+a
+a[1, 2] # Select the element in row 1, column 2
+a[c(1, 2), c(2, 3)] # Select the elements in rows 1 & 2 and columns 2 & 3
+a[1:2, 2:3] # You can also use the ":" operator to create vectors
+```
+
+If you leave either the row or column index blank, it means "selects all":
+
+```{r}
+a[c(1, 2),] # Leaving the column index blank will select all columns
+a[,c(1, 2)] # Leaving the row index blank will select all rows
+```
+
+You can also use negative integers to specify rows or columns to be excluded:
+
+```{r}
+a[-1, ] # Select all rows and except the first
+```
+
+One thing to note is that if the matrix returned after indexing has only one row or one column, the result is returned as a vector, not a matrix:
+
+```{r}
+z <- a[1, ]
+z
+class(z)
+```
+
+You can avoid this by adding the argument `drop = FALSE` while indexing:
+
+```{r}
+z <- a[1, , drop = FALSE]
+z
+class(z)
+```
+
+## Using characters indices
+
+Just like with [vectors](L6-vectors.html#22_using_characters_indices), you can name the elements in a matrix by naming the columns and / or rows with the `colnames()` and `rownames()` functions, and then use those names to access elements:
+
+```{r}
+colnames(a) <- c('one', 'two', 'three')
+rownames(a) <- c('a', 'b', 'c')
+a[c('a', 'b'), c('one', 'two')]
+```
+
+## Using logical indices
+
+Just like with [vectors](L6-vectors.html#23_using_logical_indices), when using a logical vector for indexing, the position where the logical vector is `TRUE` is returned. This is helpful for filtering matrices based on conditions:
+
+```{r}
+a[a > 5] # Select elements greater than 5
+a[a %% 2 == 0] # Select even elements
+a[,(1:ncol(a)) %% 2 == 1] # Select the odd columns
+```
+
+---
+
+# Modifying matrices
+
+Using the above methods for accessing elements of a matrix, you can modify elements in matrices by just adding an assignment operator (`<-`):
+
+```{r}
+a[1, 1] <- 10 # Modify a single element
+a
+a[a > 5] <- 0 # Modify elements greater than 5
+a
+```
+
+You can also [transpose](https://en.wikipedia.org/wiki/Transpose){target="_blank"} a matrix using the `t()` function:
+
+```{r}
+t(a)
+```
+
+Finally, you can add additional rows or columns using the `rbind()` and `cbind()` functions:
+
+```{r}
+cbind(a, c(1, 2, 3)) # Add a column
+rbind(a, c(4, 5, 6)) # Add a row
+```
+
+---
+
+# Linear algebra
+
+One of the more powerful things you can do with matrices is [linear algebra](https://en.wikipedia.org/wiki/Linear_algebra){target="_blank"}. For example, you can compute a sum-product (aka "[dot product](https://en.wikipedia.org/wiki/Dot_product){target="_blank"}") operation with a single matrix multiplication command using the `%*%` operator:
+
+```{r}
+a <- matrix(c(1, 3, -5), nrow=1)
+b <- matrix(c(4, -2, -1), ncol=1)
+a %*% b
+```
+
+To invert a matrix (a common linear algebra operation), use the `solve()` function:
+
+```{r}
+a <- matrix(c(2,3,2,1,2,1,1,1,2), nrow = 3, ncol = 3)
+solve(a)
+```
