--- a/P3-functions.Rmd
+++ b/P3-functions.Rmd
@@ -17,7 +17,7 @@ source("knitr_setup.R")
 
 In just a few words of plain English, what does each of the following functions do? Provide some explanation for your answer.
 
-```
+```{r, eval=FALSE}
 f <- function(x, y) {
     epsilon = 0.0000001
     d1 = abs(x)^2
@@ -70,7 +70,7 @@ Write the function `nthFibonacciNumber(n)` that takes a positive integer `n` and
 
 ### `isTriangularNumber(n)`
 
-A number is triangular if it equals `1+2+3+...+N` for some integer `N`. Given an integer value `n`, return `TRUE` if it is triangular, and `FALSE` otherwise. Note that this relates to the pool ball problems. Hint: For this problem you should research [Triangular Numbers](https://en.wikipedia.org/wiki/Triangular_number){target="_blank"}.
+A number is triangular if it equals `1+2+3+...+N` for some integer `N`. Given an integer value `n`, return `TRUE` if it is triangular, and `FALSE` otherwise. Note that this relates to the pool ball problems. Hint: For this problem you should research [Triangular Numbers](https://en.wikipedia.org/wiki/Triangular_number){target="_blank"}. Hint 2: This is directly related to the `numberOfPoolBalls(rows)` homework problem!
 
 ### `dcHour(londonHour)`
 
