--- a/hw3-loops-vectors.Rmd
+++ b/hw3-loops-vectors.Rmd
@@ -38,17 +38,15 @@ Rules:
 
 - You may **NOT** use strings for any of these functions.
 
-### 1) `factorial(n)` [SOLO]
+### 1) `loopFactorial(n)` [SOLO, 5 pts]
 
-#### a) `for` loop solution [5 pts]
+Use a `for` loop to write the function `loopFactorial(n)` that should return `n!`, i.e. "n factorial", which is defined for all non-negative integers. For example, `3! = 3*2*1 = 6`, `4! = 4*3*2*1 = 24`, and `5! = 5*4*3*2*1 = 120`. Note that `0` is a special case, and `0! = 1`. Assume `n >= 0`.
 
-Use a `for` loop to write the function `factorial(n)` that should return `n!`, i.e. "n factorial", which is defined for all non-negative integers. For example, `3! = 3*2*1 = 6`, `4! = 4*3*2*1 = 24`, and `5! = 5*4*3*2*1 = 120`. Note that `0` is a special case, and `0! = 1`. Assume `n >= 0`.
+### 2) vectorFactorial [SOLO, 5 pts]
 
-#### b) vector solution [5 pts]
+Write the function `vectorFactorial(n)`, which again computes the factorial of `n` but use vectors to avoid using a loop. Hint: there are some useful functions listed on the [vectors lesson page](L6-vectors.html#13_numeric_vectors) for performing operators on a vector.
 
-Write the function `factorial(n)` again, but use vectors to avoid using a loop. Hint: there are some useful functions listed on the [vectors lesson page](L6-vectors.html#13_numeric_vectors) for performing operators on a vector.
-
-### 2) `printStarTriangle(n)` [SOLO, 10 pts]
+### 3) `printStarTriangle(n)` [SOLO, 10 pts]
 
 Write a function that prints a triangle of asterisks (`*`) where the number of asterisks in each row is equal to the row number. So, `printStarTriangle(5)` should print out:
 ```
@@ -59,15 +57,15 @@ Write a function that prints a triangle of asterisks (`*`) where the number of a
 *****
 ```
 
-### 3) `numDigits(n)` [SOLO, 10 pts]
+### 4) `nthHighestValue(n, x)` [SOLO, 10 pts]
+
+Write a function to find the nth highest value in a given vector. For example, `nthHighestValue(1, c(1, 3, 5))` should return 5, because 5 is the 1st highest value in `x`, and `nthHighestValue(2, c(5, 1, 3))` should return 3 because it's the 2nd highest value in `x`. Assume only numeric inputs.
+
+### 5) `numDigits(n)` [SOLO, 10 pts]
 
 Write the function `numDigits(n)` that takes a _possibly-negative_ integer and returns the number of digits in it. So, `numDigits(12345)` returns `5`, `numDigits(0)` returns `1`, and `numDigits(-111)` returns `3`. One way you could do this would be to return `nchar(n)` (which converts the number to a string and returns the number of characters), but you cannot do that, since you may not use strings here! This can also be solved with logarithms, but seeing as this is "loops week", you should instead simply repeatedly remove the ones digit until you run out of digits.
 
-### 4) `largestDigit(n)` [SOLO, 10 pts]
-
-Write the function `largestDigit(n)` that takes a _possibly-negative_ integer and returns the largest digit in it.
-
-### 5) Happy Numbers  [COLLABORATIVE]
+### 6) Happy Numbers  [COLLABORATIVE]
 
 **Background**: Read the first paragraph from the [Wikipedia page](https://en.wikipedia.org/wiki/Happy_number){target="_blank"} on happy numbers. After some thought, we see that no matter what number we start with, when we keep replacing the number by the sum of the squares of its digits, we'll always either arrive at 4 (unhappy) or at 1 (happy). With that in mind, we want to write the function `nthHappyNumber(n)`. However, to write that function, we'll first need to write `isHappyNumber(n)`, which determines whether a number is "happy" or not. And to right that function, we'll first need to write `sumOfSquaresOfDigits(n)`. And that's top-down design! Here we go...
 
@@ -83,7 +81,7 @@ Write the function `isHappyNumber(n)` which takes a _possibly-negative_ integer 
 
 Write the function `nthHappyNumber(n)` which takes a non-negative integer, `n`, and returns the nth happy number, where nthHappyNumber(1) returns the first happy number (1).
 
-### 6) Turtle loops! [COLLABORATIVE]
+### 7) Turtle loops! [COLLABORATIVE]
 
 #### a) `turtleSquare(s)` _redux_ [5 pts]
 
