Updated file names for data analysis section

--- a/hw5-data-analysis.Rmd
+++ b/hw5-data-analysis.Rmd
@@ -1,7 +1,8 @@
 ---
-title: "Homework 5 - Matrices"
+title: "Homework 5 - Data Analysis"
 output:
   html_document:
     number_sections: false
     toc: no
 ---
+
