--- a/P10-data-visualization.Rmd
+++ b/P10-data-visualization.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Practice 10 - Data Vizualizations"
+title: "Practice 10 - Data Visualization"
 output:
   html_document:
     number_sections: false
