--- a/hw3-loops-vectors.Rmd
+++ b/hw3-loops-vectors.Rmd
@@ -42,7 +42,7 @@ Rules:
 
 Use a `for` loop to write the function `loopFactorial(n)` that should return `n!`, i.e. "n factorial", which is defined for all non-negative integers. For example, `3! = 3*2*1 = 6`, `4! = 4*3*2*1 = 24`, and `5! = 5*4*3*2*1 = 120`. Note that `0` is a special case, and `0! = 1`. Assume `n >= 0`.
 
-### 2) vectorFactorial [SOLO, 5 pts]
+### 2) `vectorFactorial(n)` [SOLO, 5 pts]
 
 Write the function `vectorFactorial(n)`, which again computes the factorial of `n` but use vectors to avoid using a loop. Hint: there are some useful functions listed on the [vectors lesson page](L6-vectors.html#13_numeric_vectors) for performing operators on a vector.
 
@@ -65,25 +65,25 @@ Write a function to find the nth highest value in a given vector. For example, `
 
 Write the function `numDigits(n)` that takes a _possibly-negative_ integer and returns the number of digits in it. So, `numDigits(12345)` returns `5`, `numDigits(0)` returns `1`, and `numDigits(-111)` returns `3`. One way you could do this would be to return `nchar(n)` (which converts the number to a string and returns the number of characters), but you cannot do that, since you may not use strings here! This can also be solved with logarithms, but seeing as this is "loops week", you should instead simply repeatedly remove the ones digit until you run out of digits.
 
-### 6) Happy Numbers  [COLLABORATIVE]
+## 6) Happy Numbers  [COLLABORATIVE]
 
 **Background**: Read the first paragraph from the [Wikipedia page](https://en.wikipedia.org/wiki/Happy_number){target="_blank"} on happy numbers. After some thought, we see that no matter what number we start with, when we keep replacing the number by the sum of the squares of its digits, we'll always either arrive at 4 (unhappy) or at 1 (happy). With that in mind, we want to write the function `nthHappyNumber(n)`. However, to write that function, we'll first need to write `isHappyNumber(n)`, which determines whether a number is "happy" or not. And to right that function, we'll first need to write `sumOfSquaresOfDigits(n)`. And that's top-down design! Here we go...
 
-#### a) `sumOfSquaresOfDigits(n)` [10 pts]
+### a) `sumOfSquaresOfDigits(n)` [10 pts]
 
 Write the function `sumOfSquaresOfDigits(n)` which takes a non-negative integer, `n`, and returns the sum of the squares of its digits (assume that `n` will always be a positive integer, so no need to check for bad inputs).
 
-#### b) `isHappyNumber(n)` [10 pts]
+### b) `isHappyNumber(n)` [10 pts]
 
 Write the function `isHappyNumber(n)` which takes a _possibly-negative_ integer and returns `TRUE` if it is happy and `FALSE` otherwise. Note that all numbers less than 1 are not happy.
 
-#### c) `nthHappyNumber(n)` [10 pts]
+### c) `nthHappyNumber(n)` [10 pts]
 
 Write the function `nthHappyNumber(n)` which takes a non-negative integer, `n`, and returns the nth happy number, where nthHappyNumber(1) returns the first happy number (1).
 
-### 7) Turtle loops! [COLLABORATIVE]
+## 7) Turtle loops! [COLLABORATIVE]
 
-#### a) `turtleSquare(s)` _redux_ [5 pts]
+### a) `turtleSquare(s)` _redux_ [5 pts]
 
 Re-write the `turtleSquare(s)` function from [HW2](hw2-functions.html), but this time use a `for` loop to draw the sides of the square. The following code should produce a square with a side length of 50:
 
@@ -96,7 +96,7 @@ turtle_do({
 ```
 ![](images/turtle_square.png){ width=456 }
 
-#### b) `concentricTurtleSquares(spacing = 5)` [10 pts]
+### b) `concentricTurtleSquares(spacing = 5)` [10 pts]
 
 Write the function `concentricTurtleSquares(spacing)` that uses the `TurtleGraphics` library to draw concentric squares from the center of the terrarium and outward. The `spacing` argument determines the spacing between each square, and the default value should be `spacing = 5`. Also, `spacing >= 1`, and your function must not allow the turtle to escape the terrarium. Hint: you may want to use `turtleSquare(s)` as a helper function. The following code should produce concentric squares with a spacing of 5:
 
@@ -109,7 +109,7 @@ turtle_do({
 ```
 ![](images/turtle_concentricSquares.png){ width=456 }
 
-#### c) `turtleCircle(r)` [15 pts]
+### c) `turtleCircle(r)` [15 pts]
 
 Write the function `turtleCircle(r)` that uses the `TurtleGraphics` library to draw a circle with radius ` r < 50`. The circle should be centered in the turtle's terrarium. Hint: To get the circle centered, remember that a circle has 360 degrees, and the circumference of a circle is $2\pi r$. The following code should produce a circle with a radius of 30:
 
